# logging_config_yaml

./: .gitignore  .pre-commit-config.yaml  .pylintrc.toml  README.rst  Taskfile.dist.yml  pyproject.toml
.github/: Taskfile.dist.yml
.github/workflows/: ci.yml
docs/: Taskfile.dist.yml
docs/source/: conf.py  index.rst
src/logging_config_yaml/: parser.py
tests/: Taskfile.dist.yml  conftest.py
